--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
               Poppins: ["Poppins, sans-serif"],
             },
             colors: {
-              clifford: "#da373d",
               violet: "hsl(257, 40%, 49%)",
               softmagenta: "hsl(300, 69%, 71%)",
             },
@@ -57,7 +56,7 @@
     </script>
   </head>
   <body
-    class="bg-auto bg-no-repeat bg-center bg-violet flex flex-col items-center justify-center"
+    class="bg-auto bg-no-repeat bg-center bg-violet flex flex-col items-center justify-center font-Poppins"
     style="background-image: url(./images/bg-desktop.svg)"
   >
     <nav class="container mx-auto flex items-center justify-between pt-2">
