--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
           so does your audience. Create connections with your users as you
           engage in genuine discussion.
         </p>
-        <a
+        <button
           href="#"
           class="border rounded-full self-baseline px-20 pt-2 p-3 m-5 bg-white text-violet text-md font-normal hover:text-white hover:bg-softmagenta border-violet"
         >
           Register
-        </a>
+        </button>
       </div>
     </div>
 
