--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
       </div>
 
       <!-- Right Side -->
-      <div class="text-white max-w-sm text-center text-gray-500 ml-4 md:w-1/2">
+      <div
+        class="text-white max-w-sm text-center text-gray-500 md:ml-40 md:w-1/2"
+      >
         <h1 class="text-2xl font-bold m-6 md:text-3xl">
           Build The Community Your Fans Will Love
         </h1>
