footer>p to lg:mt-40

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
 
     <footer>
-      <p class="mt-10 text-sm md:mt-40">
+      <p class="mt-10 text-sm lg:mt-40">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
