Updated the footer

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
       </ul>
     </div>
 
-    <footer>
-      <p class="mt-10 text-sm lg:mt-40">
+    <footer class="mt-10 text-sm lg:mt-40">
+      <p>
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
