--- a/index.html
+++ b/index.html
@@ -76,12 +76,14 @@
 
       <!-- Right Side -->
       <div
-        class="text-white max-w-sm text-center text-gray-500 md:ml-40 md:w-1/2"
+        class="text-white max-w-sm text-center text-gray-500 md:text-start md:ml-40 md:w-1/2"
       >
-        <h1 class="text-2xl font-bold m-6 md:text-3xl">
+        <h1
+          class="text-2xl font-bold font-Poppins m-6 md:text-3xl lg:text-3xl xl:leading-normal"
+        >
           Build The Community Your Fans Will Love
         </h1>
-        <p class="text-center text-md m-6 md:text-md md:text-left">
+        <p class="text-center text-md m-6 md:text-md md:text-left leading-snug">
           Huddle re-imagines the way we build communities. You have a voice, but
           so does your audience. Create connections with your users as you
           engage in genuine discussion.
